day-13 completed optimised

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MURF_API_KEY=ap2_c8fcabc6-92e2-4af7-abd8-2da3cf004bcd
 
 ASSEMBLYAI_API_KEY=c3cdb74187e440419adb96ceafd2e942
+
+GEMINI_API_KEY=AIzaSyChy7J_m4w5vmUBYf6nahzGaH1mWf1Nut0
